# AliRsnLite

./: .cproject  .gitignore  .project  CMakeLists.txt  README
cmake/: AliRsnLite.kdev4  AliRsnLite_CMake.cmake  fixAliRootInstall.sh  kdev_include_paths.tmp
cmake/scripts/: Makefile  fix-AliRoot-pkg.sh  generatePARbase.sh  patch-OADB.sh  patch-PWG2resonances.sh  patch-PWGLFresonances.sh  post-sync.sh
macros/AliRsnLiteWork/: RunALICE.C  SetupAnalysisPlugin.C
macros/AliRsnLiteWork/datasets/: AOD_TEST.txt  DS_LHC10h_p2_AOD049.txt  DS_LHC10h_p2_AOD049_1.txt  DS_LHC10h_p2_AOD049_2.txt
macros/EventMixingTest/: AddAMEventMixingTest.C  AddAnalysisTaskMixInfo.C  AddEventMixingTestTask.C  AddMixingHandler.C  AliAnalysisTaskEx02.cxx  AliAnalysisTaskEx02.h
macros/EvilTask/: AddAMEvilTask.C  AddEvilAnalysisTask.C  AliAnalysisTaskEvil.cxx  AliAnalysisTaskEvil.h
macros/Rsn/: AddAMRsn.C  AddDaughterCutsBPID.C  AddDaughterCutsKStar2010.C  AddDaughterCutsLambdaLStar2010.C  AddDaughterCutsPDG.C  AddDaughterCutsPhi2010.C  AddDaughterCutsPhi2010KaonFromKStar.C  AddMixingHandler.C  AddPIDResponseInputHandler.C  AddRsnAnalysisTask.C  AddRsnCommonEventCuts.C  AddRsnDaughterCutsBPID.C  AddRsnDaughterCutsKStar2010.C  AddRsnDaughterCutsPDG.C  AddRsnDaughterCutsPhi2010.C  AddRsnDaughterCutsPhi2010KaonFromKStar.C  AddRsnDaughterCutsPhiDev.C  AddRsnPairsKStar.C  AddRsnPairsPhi.C  LHC10b_p2_AOD038.txt  LHC10h_p2_AOD049.txt  LHC10h_p2_AOD073.txt  README  RsnConfig.C  RsnGirdPlugin.C  RsnManager.C  RsnTrainInfo.C
patches/ESD/: AliESDHeader.patch
scripts/: alirsnlite-clean.sh  alirsnlite-config.sh  alirsnlite-main.sh  alirsnlite-make.sh  alirsnlite-run.sh  patch-ESD.sh  patch-OADB.sh  patch-PWG2resonances.sh  post-sync.sh  syncAliRoot.sh
test/2000_PANL/: Makefile  proekt.tex
test/2008_preprintJINR/: Makefile  abstract_en.tex  abstract_ru.tex  first_page.tex  preprint.tex  text.tex
